# QmlPluginExample

./: .gitignore  CMakeLists.txt
dependencies/qml/User/QmlPlugin/: RedRectangle.qml  plugin.qmltypes  qmldir
plugin/: CMakeLists.txt
plugin/resources/: resources.qrc
plugin/src/c++/: extensionplugin.cpp  extensionplugin.h  qmlcxxcomponent.cpp  qmlcxxcomponent.h  qmlcxxcomponent2.cpp  qmlcxxcomponent2.h
plugin/src/qml/: ButtonWithIcon.qml  qml.qrc  qmldir
src/c++/: main.cpp
src/qml/: main.qml
